# cookiecutters

py-default/: cookiecutter.json
py-default/{{cookiecutter.name}}/: pyproject.toml
